crates/solidity/testing/snapshots/bindings_output/mappings/nested/generated/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts (crates/solidity/outputs/cargo/tests/src/bindings_output/runner.rs). Please don't edit by hand.

Parse errors:
Error: Expected CloseBrace or OpenBrace or ReturnsKeyword or Semicolon.
    ╭─[input.sol:4:5]
    │
  4 │ ╭─▶     function get(address _addr1, uint256 _i) public view returns (bool) {
    ┆ ┆   
 14 │ ├─▶     }
    │ │           
    │ ╰─────────── Error occurred here.
────╯
References and definitions: 
   ╭─[input.sol:1:1]
   │
 1 │ contract NestedMapping {
   │          ──────┬──────  
   │                ╰──────── name: 1
 2 │     mapping(address => mapping(uint256 => bool)) public nested;
   │                                                         ───┬──  
   │                                                            ╰──── name: 2
───╯
Definiens: 
    ╭─[input.sol:1:1]
    │
  1 │ ╭─▶ contract NestedMapping {
  2 │ │       mapping(address => mapping(uint256 => bool)) public nested;
    │ │   ────────────────────────────────┬───────────────────────────────  
    │ │                                   ╰───────────────────────────────── definiens: 2
    ┆ ┆   
 15 │ ├─▶ }
    │ │       
    │ ╰─────── definiens: 1
────╯
